Ajout des controlleur settings et gestion des erreurs